initialize OCR module with basic routing and configuration

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "ocr ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,10 @@
   "bugs": {
     "url": "https://github.com/saranvlmna/orc-violation-management/issues"
   },
-  "homepage": "https://github.com/saranvlmna/orc-violation-management#readme"
+  "homepage": "https://github.com/saranvlmna/orc-violation-management#readme",
+  "dependencies": {
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "nodemon": "^3.1.9"
+  }
 }
