implement Azure Blob Storage file upload and update OCR extraction logic

--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   },
   "homepage": "https://github.com/saranvlmna/orc-violation-management#readme",
   "dependencies": {
+    "@azure/storage-blob": "^12.26.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "uuid": "^11.1.0"
   }
 }
