--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "ocr ",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js"
@@ -21,7 +22,9 @@
   },
   "homepage": "https://github.com/saranvlmna/orc-violation-management#readme",
   "dependencies": {
+    "@azure/cognitiveservices-computervision": "^8.2.0",
     "@azure/storage-blob": "^12.26.0",
+    "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "multer": "^1.4.5-lts.1",
