--- a/database/config/config.json
+++ b/database/config/config.json
@@ -1,23 +1,23 @@
 {
   "development": {
-    "username": "root",
+    "username": "",
     "password": null,
-    "database": "database_development",
+    "database": "",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "postgres"
   },
   "test": {
-    "username": "root",
+    "username": "",
     "password": null,
-    "database": "database_test",
+    "database": "",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": ""
   },
   "production": {
     "username": "root",
     "password": null,
-    "database": "database_production",
+    "database": "",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": ""
   }
 }
