--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,7 +1,7 @@
 const path = require("path");
 
 module.exports = {
-  config: path.resolve(__dirname, "./database/config", "config.json"),
+  config: path.resolve(__dirname, "./database/config", "config.js"),
   "models-path": path.resolve(__dirname, "./database/models"),
   "seeders-path": path.resolve(__dirname, "./database/seeders"),
   "migrations-path": path.resolve(__dirname, "./database/migrations"),
