--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
   "dependencies": {
     "@azure/cognitiveservices-computervision": "^8.2.0",
     "@azure/cosmos": "^4.2.0",
+    "@azure/identity": "^4.7.0",
     "@azure/storage-blob": "^12.26.0",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "mongodb": "^6.13.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9",
     "uuid": "^11.1.0"
