update: add Pinecone database dependency and introduce violation router

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@azure/cosmos": "^4.2.0",
     "@azure/identity": "^4.7.0",
     "@azure/storage-blob": "^12.26.0",
-    "axios": "^1.7.9",
+    "@pinecone-database/pinecone": "^5.0.2",
+    "axios": "^1.8.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongodb": "^6.13.1",
